2011-12-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCmain.c,
	  src/SDCCglobl.h,
	  src/SDCC.lex:
	  Add option and pragma for ISO C11.
	* support/regression/tests/gcc-torture-execute-anon-1.c:
	  Disable for compilers other than sdcc and use sdcc in C11 mode.
	* src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/SDCC.y,
	  src/SDCC.lex,
	  device/include/stdnoreturn.h:
	  Accept C11 keyword _Noreturn.
	* device/include/stdio.h:
	  Do not declare gets() in C11 mode.

2011-12-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/Makefile.in,
	* sdas/as8051/Makefile.in,
	* sdas/asgb/Makefile.in,
	* sdas/asrab/Makefile.in,
	* sdas/asz80/Makefile.in: reverted as it fails to build without error

2011-12-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-pure-1.c,
	  support/regression/tests/gcc-torture-execute-string-opt-17.c,
	  support/regression/tests/gcc-torture-execute-pta-field-1.c,
	  support/regression/tests/gcc-torture-execute-string-opt-18.c,
	  support/regression/tests/gcc-torture-execute-struct-ini-1.c,
	  support/regression/tests/gcc-torture-execute-pta-field-2.c,
	  support/regression/tests/gcc-torture-execute-ptr-arith-1.c,
	  support/regression/tests/gcc-torture-execute-unroll-1.c,
	  support/regression/tests/gcc-torture-execute-struct-ini-2.c,
	  support/regression/tests/gcc-torture-execute-struct-ini-3.c,
	  support/regression/tests/gcc-torture-execute-string-opt-5.c,
	  support/regression/tests/gcc-torture-execute-stdarg-3.c,
	  support/regression/tests/gcc-torture-execute-shiftopt-1.c,
	  support/regression/tests/gcc-torture-execute-struct-ini-4.c,
	  support/regression/tests/gcc-torture-execute-stdarg-4.c,
	  support/regression/tests/gcc-torture-execute-switch-1.c,
	  support/regression/tests/gcc-torture-execute-scope-1.c,
	  support/regression/tests/gcc-torture-execute-loop-10.c,
	  support/regression/tests/gcc-torture-execute-loop-11.c,